--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.9.0",
     "core-js": "^3.3.2",
     "leaflet": "^1.5.1",
     "vue": "^2.6.10",
