--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.0",
+    "axios": "^0.19.2",
     "chart.js": "^2.9.0",
     "core-js": "^3.3.2",
+    "cors": "^2.8.5",
     "leaflet": "^1.5.1",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
