--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "vue": "^2.6.10",
     "vue-router": "^3.1.3",
     "vuelidate": "^0.7.4",
-    "vuetify": "^2.1.6"
+    "vuetify": "^2.1.6",
+    "xlsx": "^0.15.6"
   },
   "devDependencies": {
     "@mdi/font": "^4.5.95",
